Add marimo intro tutorial

--- a/src/video_13_marimo_1/pyproject.toml
+++ b/src/video_13_marimo_1/pyproject.toml
@@ -1,20 +1,12 @@
 [project]
-name = "tutorials"
+name = "marimo-tutorials"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "kuzu>=0.11.0",
-    "polars>=1.31.0",
+    "kuzu>=0.11.1",
+    "marimo>=0.14.17",
+    "polars>=1.32.2",
     "pyarrow>=21.0.0",
-]
-
-[tool.ruff]
-line-length = 100
-fix = true
-
-[dependency-groups]
-dev = [
-    "ipykernel>=6.29.5",
 ]
