--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "kuzu>=0.11.0",
-    "polars>=1.31.0",
+    "dspy>=3.0.1",
+    "kuzu>=0.11.1",
+    "marimo>=0.14.17",
+    "polars>=1.32.3",
     "pyarrow>=21.0.0",
+    "python-dotenv>=1.1.1",
 ]
 
 [tool.ruff]
